--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </nav>
       <main>
-        <section class="banner">
+        <section class="banner mb-5">
           <div class="container">
             <div class="row align-items-end">
               <div class="col-xs-12 col-md-6 order-md-last">
@@ -67,6 +67,23 @@
               
             </div>
             
+          </div>
+        </section>
+        <section>
+          <div class="container mt-5">
+            <form class="d-flex pt-4 justify-content-around g-3">
+              <div class="col-auto">
+                <p>Let’s go. Get a link 
+                  to download the app.</p>
+              </div>
+              <div class="col-auto">
+                <label for="inputPassword2" class="visually-hidden">Password</label>
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Enter mobile phone number">
+              </div>
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">APPLY TO DRIVE</button>
+              </div>
+            </form>
           </div>
         </section>
       </main>
