Сделал section карточки

--- a/index.html
+++ b/index.html
@@ -175,6 +175,50 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container">
+        <div class="card mb-3 border border-0 colorwhite" style="max-width: 1200px;">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Flexible working hours</h5>
+                <span><img src="img/01..png" alt=""></span>
+                <p class="card-text">You can decide when, and how much time you want to drive.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <img src="img/man.png" class="img-fluid rounded-start" alt="...">
+            </div>
+          </div>
+        </div><div class="card mb-2 border border-0 colorwhite ms-5" style="max-width: 1200px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="img/money.png" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Earnings</h5>
+                <span><img src="img/02..png" alt=""></span>
+                <p class="card-text">By driving with tere you can earn more.</p>               
+              </div>
+            </div>
+          </div>
+        </div><div class="card mb-3 border border-0 colorwhite mt-3" style="max-width: 1200px;">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Customer support 24/7</h5>
+                <span><img src="img/03..png" alt=""></span>
+                <p class="card-text">Tere is a local service provider and we are proud to support you in your local language. We are proud to be at your service 24/7!</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <img src="img/anotherman.png" class="img-fluid rounded-start" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 </body>
