сделал адаптивный дизайн

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       </div>
     </section>
     <section>
-      <div class="container mt-5">
-        <form class="d-flex pt-4 justify-content-around g-3">
+      <div class="container mt-5 text-center">
+        <form class="d-flex  pt-4 justify-content-around g-3 row row-cols-1 row-cols-sm-2 row-cols-sm-3">
           <div class="col-auto">
             <p>Let’s go. Get a link
               to download the app.</p>
@@ -114,9 +114,9 @@
             may
             start driving.</p>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4  d-flex justify-content-between">
           <div class="left">
-            <div class="card text-end border border-0 m-3" style="width: 18rem;">
+            <div class="card text-end border border-0 m-3 col-auto" style="width: 18rem;">
               <div class="card-body">
                 <span>
                   <img src="img/around.png" alt="">
@@ -128,7 +128,7 @@
               </div>
             </div>
 
-            <div class="card text-end border border-0 m-3" style="width: 18rem;">
+            <div class="card text-end border border-0 m-3 col-auto" style="width: 18rem;">
               <div class="card-body">
                 <span><img src="img/around.png" alt="">
                 </span>
@@ -139,15 +139,15 @@
             </div>
 
           </div>
-          <div class="center">
+          <div class="center col">
             <div class="card border border-0 text-center m-3">
-              <img src="img/green.jpg" alt="green">
+              <img src="img/green.jpg" alt="green" class="greenbol">
               <img src="img/phone.jpg" alt="phone" class="phone">
 
             </div>
           </div>
           <div>
-            <div class="card mb-3 border border-0 m-3" style="width: 18rem;">
+            <div class="card mb-3 border border-0 m-3 col-auto" style="width: 18rem;">
               <div class="card-body">
                 <span><img src="img/around.png" alt=""></span>
                 <h5 class="card-title">POST A RIDE</h5>
@@ -155,7 +155,7 @@
                   it</p>
               </div>
             </div>
-            <div class="card mb-3 border border-0 m-3" style="width: 18rem;">
+            <div class="card mb-3 border border-0 m-3 col-auto" style="width: 18rem;">
               <div class="card-body">
                 <span><img src="img/around.png" alt=""></span>
                 <h5 class="card-title">CASHLESS PAYMENT</h5>
@@ -223,7 +223,7 @@
   <footer>
     <div class="container">
       <div class="container text-center m-5">
-        <div class="row row-cols-5 mt-5">
+        <div class="row row row-cols-1 row-cols-sm-2 row-cols-md-5 mt-5">
           <div class="col"><img src="img/logoblack.png" alt="logo"></div>
           <div class="col">
             <h5>Be Our Friend</h5>
